removing entity framework and adding mysql connection

--- a/InsurancePlansNetCore-data/appsettings.json
+++ b/InsurancePlansNetCore-data/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "insurancePlans": "Server=localhost; Port=3306; Database=insurance-plans; Uid=homestead; Pwd=secret; SslMode=Preferred;"
   }
