--- a/InsurancePlans-Web/InsurancePlans-Web.csproj
+++ b/InsurancePlans-Web/InsurancePlans-Web.csproj
@@ -5,5 +5,9 @@
         <RootNamespace>InsurancePlans_Web</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\InsurancePlans-Core\InsurancePlans-Core.csproj" />
+    </ItemGroup>
+
 
 </Project>
