adding support for scss files

--- a/InsurancePlans-Web/InsurancePlans-Web.csproj
+++ b/InsurancePlans-Web/InsurancePlans-Web.csproj
@@ -9,5 +9,10 @@
       <ProjectReference Include="..\InsurancePlans-Core\InsurancePlans-Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\css" />
+      <Folder Include="wwwroot\images" />
+    </ItemGroup>
+
 
 </Project>
